svn met adds...

--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -7,9 +7,6 @@ COM_BIXPRINTSHOP_TITLE_CHECKOUT="Afrekenen"
 ; algemeen
 BIX_ADRES_TOEVOEGEN="Adres toevoegen"
 BIX_MAAK_KEUZE="Maak keuze"
-BIX_CANCEL="Annuleren"
-BIX_SAVE="Opslaan"
-BIX_EDIT="Bewerken"
 BIX_RESET="Reset"
 BIX_ZOEKEN="Zoeken"
 BIX_SORTERING="Sortering"
@@ -24,8 +21,6 @@ BIX_AANTAL_ITEMS="Aantal per pagina"
 BIX_AANTAL_PAGS="Aantal pagina's"
 BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
-BIX_DATE="d-m-Y H:i:s"
-BIX_ACTIVE="Actief"
 
 ; controller
 COM_BIXPRINTSHOP_DELETE_SUCCESS="Item succesvol naar prullenbak verplaatst"
@@ -52,10 +47,8 @@ COM_BIXPRINTSHOP_EXBTW="excl. BTW"
 COM_BIXPRINTSHOP_INBTW="incl. BTW"
 COM_BIXPRINTSHOP_BTW_SPR="%s BTW"
 BIX_AANTAL_STUKS="Aantal stuks"
-COM_BIXPRINTSHOP_BTW="BTW"
-COM_BIXPRINTSHOP_NU="Nu"
-COM_BIXPRINTSHOP_ADVIESPRIJS="Adviesprijs"
-
+COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
+COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
 ;factuurtemplate
 COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
@@ -71,15 +64,7 @@ COM_BIXPRINTSHOP_FACTUUR_TOTAAL_NETTO="Totaal netto"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BTW="Totaal BTW"
 COM_BIXPRINTSHOP_FACTUUR_TOTAAL_BRUTO="Totaal bruto"
 COM_BIXPRINTSHOP_FACTUUR_VOLDAAN_SPRF="Factuur voldaan via %s, betaling-ID: %s"
-FACTUUR_INITIEEL="Initiëel"
-FACTUUR_RESERVERING="Reservering"
-FACTUUR_CREDIT="Credit"
-FACTUUR_GECREDITEERD="Gecrediteerd"
-COM_BIXPRINTSHOP_FACTUUR_FACTUURNUMMER="Factuurnummer"
-COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
-COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
-COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
-COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
+COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
 
 ; users, adressen
 COM_BIXPRINTSHOP_USER_TITLE_GEGEVENS="Gegevens"
@@ -127,23 +112,18 @@ COM_BIXPRINTSHOP_DELETE_ORDER="Verwijder order"
 COM_BIXPRINTSHOP_DELETE_ORDER_DESC="Verwijder deze order uit de winkelwagen"
 COM_BIXPRINTSHOP_ORDERID="Order ID"
 COM_BIXPRINTSHOP_ORDERNETTO="Nettototaal order"
-COM_BIXPRINTSHOP_ORDERBRUTO="Brutototaal order"
 COM_BIXPRINTSHOP_ORDERBTW="BTW bedrag"
-COM_BIXPRINTSHOP_TOTAALORDERS="Totaal orders"
 COM_BIXPRINTSHOP_NETTOKORTING="Kortingsbedrag"
 COM_BIXPRINTSHOP_ADMINISTRATIEKOSTEN="Administratiekosten"
-COM_BIXPRINTSHOP_CARTNETTO="Subtotaal"
-COM_BIXPRINTSHOP_CARTBRUTO="Totaal"
+COM_BIXPRINTSHOP_CARTNETTO="Nettototaal bestelling"
+COM_BIXPRINTSHOP_CARTBRUTO="Bedrag bestelling"
 COM_BIXPRINTSHOP_CARTBTW="BTW bedrag bestelling"
 COM_BIXPRINTSHOP_CART_IS_EMPTY="Winkelwagen is nog leeg."
 COM_BIXPRINTSHOP_TO_CHECKOUT="Verder naar betaling"
 COM_BIXPRINTSHOP_BUTTON_PRODUCTENOVERZICHT="Productoverzicht"
 COM_BIXPRINTSHOP_EMPTY_CART="Winkelwagen legen"
 COM_BIXPRINTSHOP_OPSLAANOFFERTE="Opslaan als offerte"
-COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking"
-COM_BIXPRINTSHOP_ORDER_ORDERDATUM="Orderdatum"
-COM_BIXPRINTSHOP_ORDER_LEVERDATUM="Leverdatum"
-COM_BIXPRINTSHOP_ORDER_LEVERDATUM_DESC="De geplande leverdatum voor deze order"
+COM_BIXPRINTSHOP_ADVIESPRIJS="Adviesprijs"
 
 ; checkout
 COM_BIXPRINTSHOP_LOGIN_RESET="Wachtwoord vergeten?"
@@ -158,16 +138,14 @@ COM_BIXPRINTSHOP_INLOGGEN="Inloggen"
 COM_BIXPRINTSHOP_INLOGGEN_DESC="Log in met uw bestaande account"
 COM_BIXPRINTSHOP_VOEG_ADERS_TOE="Voeg eerst een adres toe"
 COM_BIXPRINTSHOP_VOEG_FACTUURADRES_TOE_SPR="Stel een standaardfactuuradres in uw %sprofiel%s"
-COM_BIXPRINTSHOP_SELECT_ADRESSEN="Selecteer adressen"
 COM_BIXPRINTSHOP_SELECT_VERZENDADRES="Selecteer een leveradres"
-COM_BIXPRINTSHOP_SELECT_FACTUURADRES="Selecteer een factuuradres"
+COM_BIXPRINTSHOP_SELECT_FACTUURADRES="Uw factuuradres"
 COM_BIXPRINTSHOP_VERZENDADRES="Afleveradres"
 COM_BIXPRINTSHOP_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_CHECKOUT_JOUWREF="Uw referentie"
 COM_BIXPRINTSHOP_PLG_FACTUURMAIL_FACTUURREFERENTIE_DESC="Vermeld hier uw eigen referentie zoals inkoopnummer of klantnaam."
 COM_BIXPRINTSHOP_CHECKOUT_BESTANDSUPLOAD="Bestandsupload"
 COM_BIXPRINTSHOP_CHECKOUT_BESTANDSUPLOAD_DESC="Het uploaden van bestanden is mogelijk na uw bestelling."
-COM_BIXPRINTSHOP_CHECKOUT_NAARBETALING="Naar betaling"
 COM_BIXPRINTSHOP_BETAALMETHODE="Selecteer betaalmethode"
 COM_BIXPRINTSHOP_EXTRA_INFO="Opmerkingen"
 COM_BIXPRINTSHOP_EXTRA_INFO_TOEVOEGEN="Voeg eventueel extra informatie toe"
@@ -182,11 +160,11 @@ COM_BIXPRINTSHOP_ADRESSEN_IN_PROFIEL="Adressen kunt u invoeren in uw gebruikersp
 COM_BIXPRINTSHOP_TITLE_AFRONDEN="Bestelling afronden"
 COM_BIXPRINTSHOP_TO_PAYMENT="Verder naar betaling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELID="Bestelnummer"
+COM_BIXPRINTSHOP_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELLINGDATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BESTELSTATUS="Status bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT="Opmerking bij bestelling"
 COM_BIXPRINTSHOP_BESTELLING_BESTELCOMMENT_SHORT="Opmerking"
-COM_BIXPRINTSHOP_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_PRIJSDETAILS="Details prijsopbouw"
 COM_BIXPRINTSHOP_TOTAALNETTO="Totaalbedrag netto"
 COM_BIXPRINTSHOP_TOTAALBTW="Totaalbedrag btw"
@@ -197,42 +175,25 @@ COM_BIXPRINTSHOP_BESTELLING_BETALINGDATUM="Datum betaling"
 COM_BIXPRINTSHOP_BESTELLING_ORDERS="Gekoppelde orders"
 COM_BIXPRINTSHOP_BESTELLING_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_BESTELLING_BETALINGSTATUS="Status betaling"
+BIX_UPLOAD_FILE="Klik hier om bestand(en) uploaden bij bestelling"
 COM_BIXPRINTSHOP_AFRONDEN="Bestelling afronden"
 COM_BIXPRINTSHOP_CHECKOUT_FACTUURADRES="Factuuradres"
 COM_BIXPRINTSHOP_CHECKOUT_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE_SELECTEREN="Selecteer de gewenste betaalmethode"
 COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
-COM_BIXPRINTSHOP_CART_KORTING_PLACEHOLDER="Uw kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer uw kortingscode in"
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Korting via een couponcode"
-;statussen
-BIX_SUCCESS="Voltooid"
-BIX_FAILURE="Betaalrequest mislukt"
-BIX_BETALING_VERWERK="Wachtend op betaling"
-BIX_VALIDATION_ERR="Betaalrequest niet valide"
-BIX_TECHNICAL_ERR="Technische fout"
-BIX_REJECTED="Geweigerd"
-BIX_PENDING="In verwerking"
-BIX_CANCELLED="Onderbroken door gebruiker"
-BIX_CANCELLED_MERCH="Onderbroken door bank"
-;foutmeldingen
-COM_BIXPRINTSHOP_BETALEN_GEENBESTELID="Geen bestelling-ID gevonden! Bekijk de order via uw gebruikersprofiel"
-COM_BIXPRINTSHOP_BETALEN_GEEN_PLUGINRETURN="Geen return ontvangen van betaalplugins."
-COM_BIXPRINTSHOP_BETALEN_PUSH_GEENBESTELID="Geen bestelling-ID in push bericht!"
-COM_BIXPRINTSHOP_BETALEN_PUSH_FOUT="Fout in verwerking pushbericht betaalprovider"
-
 ; Upload
-COM_BIXPRINTSHOP_BESTANDENOVERZICHT="Overzicht bestanden"
-COM_BIXPRINTSHOP_DROPBOX="Of sleep direct uw bestanden in het kader"
-BIX_UPLOAD_FILE="Klik om een bestand te selecteren"
+COM_BIXPRINTSHOP_DROPBOX="Of sleep direct je bestanden in het kader"
+BIX_UPLOAD_FILE="Upload bestand"
 BIX_RETRY="Opnieuw"
 BIX_UPLOAD_FAILED="Upload mislukt"
 BIX_UPLOAD_DROPFILES="Sleep bestanden in dit kader om te deze te uploaden."
 BIX_UPLOAD_PROCESSING_FILES="Bestanden verwerken.."
 BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
-BIX_DOWNLOAD="Downloaden"
+BIX_DOWNLOAD="Download"
 BIX_DELETE="Verwijderen"
 ; Profiel
 COM_BIXPRINTSHOP_BUTTON_PROFIEL="Mijn profiel"
@@ -242,8 +203,6 @@ COM_BIXPRINTSHOP_USER_PROFILE="Uw gegevens"
 COM_BIXPRINTSHOP_BESTELLING_ID="Bestelling"
 COM_BIXPRINTSHOP_ORDER_ID="Order"
 COM_BIXPRINTSHOP_ORDER_STATUS="Orderstatus"
-COM_BIXPRINTSHOP_ORDER_BESTANDEN="Orderbestanden"
-COM_BIXPRINTSHOP_TITLE_BESTELDETAILS="Details bestelling"
 COM_BIXPRINTSHOP_BESTELLING_DATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETAALMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_BESTELLING_BETAALDATUM="Betaaldatum"
@@ -251,8 +210,6 @@ COM_BIXPRINTSHOP_BESTELLING_STATUS="Bestellingstatus"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURGEGEVENS="Factuurgegevens"
 COM_BIXPRINTSHOP_BESTELLING_BESTELUMMER="Bestelling "
 COM_BIXPRINTSHOP_BESTELLING_DETAILS="Bestellingdetails"
-COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
-COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
 COM_BIXPRINTSHOP_TITLE_OFFERTEDETAILS="Offertedetails"
 COM_BIXPRINTSHOP_OFFERTE_ID="Offertenummer"
 COM_BIXPRINTSHOP_OFFERTE_BESTELID="Offertenummer"
