adds en removes??

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -260,16 +260,6 @@ COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN="Feestdagen uitvoertermijn"
 COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN_DESC="Geef aan welke feestdagen geblokkeerd moeten worden voor orderverwerking. LET OP! Invoeren kommagescheiden, YYYY-MM-DD, als volgt: 2013-12-25,2013-12-26,2013-03-15"
 PRIJSTYPE_MARGE="Gebruik margeberekening"
 PRIJSTYPE_VERKOOPDRUKKERIJ="Gebruik verkoopdrukkerijen"
-;statussen
-BIX_SUCCESS="Voltooid"
-BIX_FAILURE="Betaalrequest mislukt"
-BIX_BETALING_VERWERK="Wachtend op betaling"
-BIX_VALIDATION_ERR="Betaalrequest niet valide"
-BIX_TECHNICAL_ERR="Technische fout"
-BIX_REJECTED="Geweigerd"
-BIX_PENDING="In verwerking"
-BIX_CANCELLED="Onderbroken door gebruiker"
-BIX_CANCELLED_MERCH="Onderbroken door bank"
 ;foutmeldingen
 COM_BIXPRINTSHOP_BETALEN_GEENBESTELID="Geen bestelling-ID gevonden! Bekijk de order via uw gebruikersprofiel"
 
@@ -523,7 +513,6 @@ COM_BIXPRINTSHOP_AFWERKPRIJS_AFWERKTYPE="Afwerktype"
 COM_BIXPRINTSHOP_LEGEND_VERVOERPRIJZEN="Vervoerprijzen"
 COM_BIXPRINTSHOP_LEGEND_VERVOERPRIJS="Vervoerprijs"
 COM_BIXPRINTSHOP_VERVOERPRIJS_VERVOERDER="Vervoerder"
-BIX_AFWERKPRIJS_TOEVOEGEN="Vervoerprijs toevoegen"
 COM_BIXPRINTSHOP_VERVOERPRIJS_ID="Vervoerprijs ID"
 COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTINKOOP="Opstart inkoop"
 COM_BIXPRINTSHOP_VERVOERPRIJS_OPSTARTPRIJS="Opstartprijs"
@@ -569,8 +558,10 @@ COM_BIXPRINTSHOP_PARAMS_ALERT_ERROR="Error"
 COM_BIXPRINTSHOP_PARAMS_DEPENDENCIES_DESC="Opties die in hun keuze beperkt worden door de waarde van deze optie"
 COM_BIXPRINTSHOP_PARAMS_NRCOLS="Aantal kolommen"
 COM_BIXPRINTSHOP_PARAMS_NRCOLS_DESC="Aantal kolommen die de optie breed is. Dit kan de mogelijkheden beperken!"
-COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS="Class achtervoegsel"
-COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS_DESC="Extra CSS-class voor de optie"
+COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS="Class selector"
+COM_BIXPRINTSHOP_PARAMS_OPTIONCLASS_DESC="Extra CSS-class voor de optieselector"
+COM_BIXPRINTSHOP_PARAMS_HOLDERCLASS="Class optiehouder"
+COM_BIXPRINTSHOP_PARAMS_HOLDERCLASS_DESC="Extra CSS-class voor de optiehouder"
 COM_BIXPRINTSHOP_PARAMS_SHOW_DESCRIPTION="Toon beschrijving"
 COM_BIXPRINTSHOP_PARAMS_SHOW_DESCRIPTION_DESC="Hoe moet de optie beschrijving getoond worden?"
 SHOW_DESCRIPTION_IN_TOOLTIP="In tooltip"
