--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -641,8 +641,6 @@ COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDEBOTTOM="Naast form - Onder"
 ;drukvellen
 COM_BIXPRINTSHOP_AANTAL_VAN_TOT_SPRF="Van %s tot %s stuks"
 COM_BIXPRINTSHOP_GEWICHT_VAN_TOT_SPRF="Van %s tot %s kilo"
-MACHINETYPE_DIGITAAL="Digitaal"
-MACHINETYPE_OFFSET="Offset"
 COM_BIXPRINTSHOP_ADRES_TAV="t.a.v."
 COM_BIXPRINTSHOP_ADRES_TELEFOON="Telefoonnummer"
 COM_BIXPRINTSHOP_ERROR_NO_ORDEROPTIONVALUES="Geen order optie waardes "
@@ -1016,6 +1014,7 @@ COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJSEENHEID_DESC=""
 PRIJSEENHEID_1VEL="1 vel"
 PRIJSEENHEID_1000VEL="1000 vellen"
 PRIJSEENHEID_100KG="100 kilo"
+PRIJSEENHEID_M2="Vierkante meter"
 COM_BIXPRINTSHOP_CONFIG_PLUGIN_ACTIVE="Plugin actief"
 COM_BIXPRINTSHOP_CONFIG_PLUGIN_DEBUG="Plugin debug"
 
