--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -173,6 +173,7 @@ COM_BIXPRINTSHOP_CHECKOUT_BETAALMETHODE_SELECTEREN="Selecteer de gewenste betaal
 COM_BIXPRINTSHOP_CART_KORTING="Kortingscode"
 COM_BIXPRINTSHOP_CART_KORTING_DESC="Voer de kortingscode in die je van Peter hebt gekregen."
 COM_BIXPRINTSHOP_CART_KORTING_INFO_TITLE="Peter geeft korting"
+COM_BIXPRINTSHOP_BETALING_GESLAAGD="Bestelling geslaagd. U kunt nu uw bestanden bij uw bestelling uploaden."
 
 ; Upload
 COM_BIXPRINTSHOP_DROPBOX="Of sleep direct je bestanden in het kader"
@@ -216,6 +217,9 @@ COM_BIXPRINTSHOP_OFFERTE_INGELADEN="De offerte is ingeladen en kan betaald worde
 COM_BIXPRINTSHOP_BESTELLING_INGELADEN="De bestelling is ingeladen en kan betaald worden"
 COM_BIXPRINTSHOP_OFFERTE_NOG_GEEN_OFFERTES="Nog geen offertes opgeslagen"
 COM_BIXPRINTSHOP_BETAAL_BESTELLING="Betaling afronden"
+COM_BIXPRINTSHOP_CONFIG_MAIL_AANHEF="Aanhef gebruikers"
+BIX_FORMEEL="Formeel"
+BIX_INFORMEEL="Informeel"
 ; Volgense / Vorige knoppen
 COM_BIXPRINTSHOP_BUTTON_VORIGE="Vorige pagina"
 COM_BIXPRINTSHOP_BUTTON_VOLGENDE="Volgende pagina"
