--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -16,7 +16,7 @@ BIX_DESCENDING="Aflopend"
 BIX_STATUS="Status"
 BIX_ACTIEF="Actief"
 BIX_INACTIEF="Inactief"
-BIX_VERWIJDERD="Verwijderd"
+BIX_DELETED="Verwijderd"
 BIX_AANTAL_ITEMS="Aantal per pagina"
 BIX_OKE="Oké"
 
