--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -614,6 +614,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_IMAGE="Productafbeelding"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_DESC="Hier kunt u een afbeelding uploaden voor de productpagina"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_ORIG="Originele grootte"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_X_PX="Producticoon %d px"
+COM_BIXPRINTSHOP_PRODUCTEN_METATITLE="Meta titel"
 COM_BIXPRINTSHOP_PRODUCTEN_METADESCR="Meta beschrijving"
 COM_BIXPRINTSHOP_PRODUCTEN_METAKEYWORDS="Meta keywords"
 COM_BIXPRINTSHOP_PRODUCTEN_PRODUCTDESCR="Productbeschrijving"
