--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_import_brochures.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_import_brochures.ini
@@ -23,7 +23,12 @@ COM_BIXPRINTSHOP_LEGEND_PRODOPTIES="Gekoppelde productopties"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_IMPORTLIMIT="Max aantal rijen per keer"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_DELIMITER="Delimiter"
 COM_BIXPRINTSHOP_LEGEND_AANGEMAAKT="Aangemaakte opties"
+
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_UITVOERTERMIJNEN="Uitvoertermijnen"
+COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_DIGITAAL="Digitaal"
+COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_OFFSET="Offset"
+COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_NORMAAL_INKOOP="Inkoopprijs normaal"
+COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_NORMAAL_VERKOOP="Verkoopprijs normaal"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_EXPRESS_INKOOP="Inkoopprijs express"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_EXPRESS_VERKOOP="Verkoopprijs express"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_NEXTDAY_INKOOP="Inkoopprijs next-day"
@@ -34,3 +39,6 @@ COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_MACHINETYPE="Printer naam"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_BESCHRIJVING="Productbescrhijving"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_IMNPORTBESTAND="Importbestand"
 COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_RIJNUMMER="Rijnummer"
+
+COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_GEENVERVOER="Blokkeer vervoerprijs"
+COM_BIXPRINTSHOP_PLG_IMPORT_BROCHURES_GEENVERVOER_DESC="Blokkeer voor deze prijs de vervoersprijsberekening"
