--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_import_enkelvoudig.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_import_enkelvoudig.ini
@@ -23,7 +23,12 @@ COM_BIXPRINTSHOP_LEGEND_PRODOPTIES="Gekoppelde productopties"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_IMPORTLIMIT="Max aantal rijen per keer"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_DELIMITER="Delimiter"
 COM_BIXPRINTSHOP_LEGEND_AANGEMAAKT="Aangemaakte opties"
+
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_UITVOERTERMIJNEN="Uitvoertermijnen"
+COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_DIGITAAL="Digitaal"
+COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_OFFSET="Offset"
+COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_NORMAAL_INKOOP="Inkoopprijs normaal"
+COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_NORMAAL_VERKOOP="Verkoopprijs normaal"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_EXPRESS_INKOOP="Inkoopprijs express"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_EXPRESS_VERKOOP="Verkoopprijs express"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_NEXTDAY_INKOOP="Inkoopprijs next-day"
@@ -34,3 +39,5 @@ COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_MACHINETYPE="Printer naam"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_BESCHRIJVING="Productbescrhijving"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_IMNPORTBESTAND="Importbestand"
 COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_RIJNUMMER="Rijnummer"
+COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_GEENVERVOER="Blokkeer vervoerprijs"
+COM_BIXPRINTSHOP_PLG_IMPORT_ENKELVOUDIG_GEENVERVOER_DESC="Blokkeer voor deze prijs de vervoersprijsberekening"
