--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -15,13 +15,13 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_KIES_METHODE="Kies aanlevermethode"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ORDER_SPR="Order %s, %s"
 
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_STATUS_METHODE="Aanlevermethode selecteren"
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_KIES_METHODE_DESC="Selecteer de manier van aanleveren......"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_KIES_METHODE_DESC="Selecteer de manier van aanleveren."
 BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT="Automatische controle"
-BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG="Handmatige controle"
-BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER="WeTransfer"
-BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT_DESC="Automatische controle beschr"
-BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG_DESC="Handmatige controle beschr"
-BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER_DESC="WeTransfer beschr"
+BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG="Handmatige controle (€4,95)"
+BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER="WeTransfer.com (€4,95)"
+BESTANDSCONTROLE_UPLOADTYPE_AUTOMAAT_DESC="Je bestand wordt direct gecontroleerd. Het systeem laat vervolgens weten of het bestand gereed is voor druk of dat er eerst nog wijzigingen doorgevoerd moeten worden."
+BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG_DESC="De vormgevers van Drukhetnu.nl kijken handmatig je bestand na. Mochten er wijzigingen doorgevoerd moeten worden krijg je daarvan terugkoppeling. Heb je nog vragen, dan helpen we je graag."
+BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER_DESC="Lever je bestand aan via Wetranfer. Het bestand wordt direct gecontroleerd door ons team. Uiteraard krijg je hier een terugkoppeling van."
 ;table
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLEID="Controle ID"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLESTATUS=""
@@ -62,7 +62,7 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SLUITEN="Sluiten"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_GEEN_BESTANDEN="Nog geen bestanden geüpload. Upload bestanden in de vorige stap."
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FOUT_BIJ_VERZENDEN="Fout bij klaarmaken bestanden voor controle"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTAND_GEEN_PDF_SPR="Bestand %s is geen PDF bestand! Bestand overgeslagen voor controle."
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTAND_VERZONDEN_SPR="Bestand %s wordt gecontroleerd."
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_BESTAND_VERZONDEN_SPR="Bestand wordt gecontroleerd."
 
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CONTROLEID="Controle ID"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FILEID="Bestands ID"
@@ -70,7 +70,7 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_ORDERID="Order ID"
 COM_BIXPRINTSHOP_UPLOADEN="Klik om uw bestanden te uploaden"
 
 ;return front
-COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_UPLOADTYPE_IMAGEDESCR_SPR="Type controle: %s"
+COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_UPLOADTYPE_IMAGEDESCR_SPR="%s"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_FOUT="Fout in controle"
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_WACHT_DESCR="De automatische bestandscontrole is bezig. Een moment geduld."
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLE_ONTVANGEN_DESCR="Feedback van de automatische bestandscontrole is ontvangen"
