--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -287,6 +287,7 @@ COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ATTRIB ="Productoptie plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ORDER="Orderbewerking plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_IMPORT="Import plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_VERVOER="Vervoer plugins"
+COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DRUKKERIJ="Drukkerij plugins"
 COM_BIXPRINTSHOP_PLG_ACTIVE="Activeer plugin"
 COM_BIXPRINTSHOP_PLG_DEBUG="Toon debug"
 COM_BIXPRINTSHOP_PLG_DEBUG_DESC="Toon debuginformatie bij deze plugin"
@@ -373,6 +374,8 @@ COM_BIXPRINTSHOP_DRUKKERIJEN_ALIAS_DESC="De alias vormt de url voor de drukkerij
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYNAAM="Bedrijfsnaam"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYNAAM_DESC="Geef de bedrijfsnaam op."
 COM_BIXPRINTSHOP_DRUKKERIJEN_ADRES="Adres"
+COM_BIXPRINTSHOP_DRUKKERIJEN_DRUKKPLUGIN="Drukkerij plugin"
+COM_BIXPRINTSHOP_DRUKKERIJEN_DRUKKPLUGIN_DESC="Selecteer eventueel een plguin voor extra opties bij deze drukkerij."
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYSTRAAT="Straatnaam"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYHUISNUMMER="Huisnummer"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYPOSTCODE="Postcode"
