--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -24,7 +24,7 @@ BESTANDSCONTROLE_UPLOADTYPE_HANDMATIG_DESC="De vormgevers van Drukhetnu.nl kijke
 BESTANDSCONTROLE_UPLOADTYPE_WETRANSFER_DESC="Lever je bestand aan via Wetranfer. Het bestand wordt direct gecontroleerd door ons team. Uiteraard krijg je hier een terugkoppeling van."
 ;table
 COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLEID="Controle ID"
-COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLESTATUS=""
+COM_BIXPRINTSHOP_BESTANDSCONTROLE_CONTROLESTATUS="Status"
 CONTROLE_WACHTEND="Wachtend"
 CONTROLE_ONTVANGEN="Controle ontvangen"
 CONTROLE_ONMOGELIJK="Niet mogelijk"
@@ -96,4 +96,7 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT_DESC="Niet-krit
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT="Afhandelingen"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT_DESC="Afhandelingen beschrijving"
 
+CONTROLERESULT_FOUT="Bestand is afgekeurd. Upload een aangepast bestand."
+CONTROLERESULT_HERSTELD="Bestand is hersteld en gereed voor druk."
+CONTROLERESULT_GOED="Bestand is goed gekeurd en gereed voor druk."
 
