--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandscontrole.ini
@@ -96,7 +96,7 @@ COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_CRITICALFAILURES_RESULT_DESC="Niet-krit
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT="Afhandelingen"
 COM_BIXPRINTSHOP_PLUGIN_BESTANDSCONTROLE_SIGNOFFS_RESULT_DESC="Afhandelingen beschrijving"
 
-CONTROLERESULT_FOUT="Bestand is afgekeurd. Upload een aangepast bestand."
+CONTROLERESULT_FOUT="Het bestand is niet optimaal. De klantenservice neemt contact met u op. U kunt ons ook bellen op 085-2731249"
 CONTROLERESULT_HERSTELD="Bestand is hersteld en gereed voor druk."
 CONTROLERESULT_GOED="Bestand is goed gekeurd en gereed voor druk."
 
