--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -180,7 +180,8 @@ COM_BIXPRINTSHOP_EXTRA_INFO_TOEVOEGEN="Voeg eventueel extra informatie toe"
 COM_BIXPRINTSHOP_ORDEROVERZICHT="Overzicht orders"
 COM_BIXPRINTSHOP_ACCOORD_MET_VOORWAARDEN_SPR="Ik ga akkoord met de %svoorwaarden%s van %s."
 COM_BIXPRINTSHOP_UPLOAD_BESTANDEN="Hier kunt u de bestanden uploaden. Heeft u vragen? Dan kunt u altijd contact met ons opnemen."
-
+COM_BIXPRINTSHOP_UPLOADEN="Bestanden uploaden"
+COM_BIXPRINTSHOP_LATER_UPLOADEN="U kunt de bestanden ook na de betaling uploaden."
 ; userregistratie
 COM_BIXPRINTSHOP_ADRESSEN_IN_PROFIEL="Adressen kunt u invoeren in uw gebruikersprofiel."
 
