--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_analytics_tracking.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_analytics_tracking.ini
@@ -5,4 +5,7 @@
 COM_BIXPRINTSHOP_PLG_ANALYTICS_TRACKING_DESCR="E-Commerce koppeling met Google Analytics"
 
 COM_BIXPRINTSHOP_PLUGIN_TITLE_ANALYTICS_TRACKING="Analtyics Tracking"
+COM_BIXPRINTSHOP_PLUGIN_PARAM_ANALYTICS_UNIVERSAL="Universal Analytics Tracking"
+COM_BIXPRINTSHOP_PLUGIN_PARAM_ANALYTICS_ADWORDS="AdWords Tracking"
 COM_BIXPRINTSHOP_PLUGIN_PARAM_ANALYTICS_TRACKINGCODE="Tracking code"
+COM_BIXPRINTSHOP_PLUGIN_PARAM_ANALYTICS_TRACKINGCODEUA="Universal Analytics Tracking code"
