--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -909,6 +909,7 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
+COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
 
 COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
 COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
