--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_rekening.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_rekening.ini
@@ -22,3 +22,4 @@ COM_BIXPRINTSHOP_PLUGIN_REKENING_KOSTEN_SPR="Hiervoor wordt %s aan administratie
 
 COM_BIXPRINTSHOP_PLUGIN_REKENING_SUCCESS="Betaling succesvol verwerkt."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_INVOICEMESS_SPR="Gelieve het volledige bedrag over te maken op rekening %s, t.n.v. %s."
+COM_BIXPRINTSHOP_PLUGIN_REKENING_NIET_TOEGESTAAN="Deze betaalmethode is niet toegestaan. Neem contact op met de klantenservice."
