--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -64,6 +64,7 @@ COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's
 ;factuurtemplate
 COM_BIXPRINTSHOP_FACTUUR_TITLE="Factuur"
 COM_BIXPRINTSHOP_FACTUUR_BETREFT="Betreft"
+COM_BIXPRINTSHOP_FACTUUR_TITLE_SPR="Factuur van %s"
 COM_BIXPRINTSHOP_FACTUUR_SUBJECT_SPR="Bestelling %s bij %s"
 COM_BIXPRINTSHOP_FACTUUR_FACTNUMMER="Factuurnummer"
 COM_BIXPRINTSHOP_FACTUUR_FACTDATUM="Factuurdatum"
@@ -86,6 +87,9 @@ COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
 COM_BIXPRINTSHOP_DOWNLOAD_FACTUUR="Factuur downloaden"
+COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
+
+COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
 COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
 ; users, adressen
 COM_BIXPRINTSHOP_USER_TITLE_GEGEVENS="Gegevens"
