--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -229,7 +229,7 @@ COM_BIXPRINTSHOP_BETALEN_GEENBESTELID="Geen bestelling-ID gevonden! Bekijk de or
 COM_BIXPRINTSHOP_BETALEN_GEEN_PLUGINRETURN="Geen return ontvangen van betaalplugins."
 COM_BIXPRINTSHOP_BETALEN_PUSH_GEENBESTELID="Geen bestelling-ID in push bericht!"
 COM_BIXPRINTSHOP_BETALEN_PUSH_FOUT="Fout in verwerking pushbericht betaalprovider"
-
+COM_BIXPRINTSHOP_BETALING_GESLAAGD="Betaling geslaagd"
 ; Upload
 COM_BIXPRINTSHOP_BESTANDENOVERZICHT="Overzicht bestanden"
 COM_BIXPRINTSHOP_DROPBOX="Of sleep direct uw bestanden in het kader"
@@ -242,6 +242,7 @@ BIX_UPLOAD_PROGRESS="{percent}% van {total_size}"
 BIX_UPLOAD_WAITING="Wachten"
 BIX_DOWNLOAD="Downloaden"
 BIX_DELETE="Verwijderen"
+
 ; Profiel
 COM_BIXPRINTSHOP_BUTTON_PROFIEL="Mijn profiel"
 COM_BIXPRINTSHOP_USER_DETAILS="login gegevens"
@@ -253,6 +254,7 @@ COM_BIXPRINTSHOP_ORDER_STATUS="Orderstatus"
 COM_BIXPRINTSHOP_ORDER_BESTANDEN="Orderbestanden"
 COM_BIXPRINTSHOP_ORDER_ORDERCOMMENT="Opmerking bij deze order"
 COM_BIXPRINTSHOP_TITLE_BESTELDETAILS="Details bestelling"
+COM_BIXPRINTSHOP_TITLE_OFFERTES="Opgeslagen offertes"
 COM_BIXPRINTSHOP_BESTELLING_DATUM="Besteldatum"
 COM_BIXPRINTSHOP_BESTELLING_BETAALMETHODE="Betaalmethode"
 COM_BIXPRINTSHOP_BESTELLING_BETAALDATUM="Betaaldatum"
