factuurlang in plugin

--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -826,9 +826,10 @@ COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURADRES="Factuuradres"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
-FACTUUR_CREDIT="Credit"
+FACTUUR_CREDITFACTUUR="Credit"
 FACTUUR_GECREDITEERD="Gecrediteerd"
-
+COM_BIXPRINTSHOP_FACTUUR_AANGEMAAKT="Factuur aangemaakt"
+COM_BIXPRINTSHOP_FACTUUR_GECREDITEERD="Factuur gecrediteerd"
 ORDERTYPE_INTERN="Ordertype intern"
 ORDERTYPE_EXTERN="Ordertype extern"
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED="Bevestigd"
@@ -893,6 +894,7 @@ COM_BIXPRINTSHOP_FACTUUR_CREDITID="Credit ID"
 COM_BIXPRINTSHOP_FACTUUR_EXTERNID="Extern ID"
 COM_BIXPRINTSHOP_FACTUUR_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURNUMMER="Factuurnummer"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURREDEN="Factuurreden"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
@@ -910,9 +912,8 @@ COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
-
-COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
-COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
+COM_BIXPRINTSHOP_CREEER_FACTUUR="Nieuwe factuur maken"
+COM_BIXPRINTSHOP_BESTELLING_FACTUUR_VERSCHIL="Verschil tussen bestelbedrag en factuurbedrag!"
 
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
 COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
@@ -1143,7 +1144,7 @@ COM_BIXPRINTSHOP_MAILHISTORIE_DRUKKERIJ="Drukkerij"
 COM_BIXPRINTSHOP_MAILHISTORIE_ADMIN="Admin"
 COM_BIXPRINTSHOP_MAILHISTORIE_NOMAIL="Geen mailberichten"
 
-;prijzen
+;prijzen 
 BIX_SELECT_PRODUCT="Selecteer product"
 BIX_SELECT_DRUKKER="Selecteer drukkerij"
 
