--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
@@ -83,6 +83,7 @@ COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_TEXT="Betaling via iDEAL geselecteerd."
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_SELECTED="Betaling via iDEAL geselecteerd."
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_SELECT_BANK="Selecteer hieronder uw bank. (Nederland)"
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_KOSTEN_SPR="Hiervoor worden E %s administratiekosten gerekend."
+COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_PREPARED="Betaling met iDEAL is aangevraagd."
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_SUCCESS="Betaling met iDEAL geslaagd!"
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_BETAALINFO_INCOMPLEET="Betaalinformatie is incompleet!"
 
