--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_rekening.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_rekening.ini
@@ -20,6 +20,7 @@ COM_BIXPRINTSHOP_PLUGIN_REKENING_DESC_CHECKOUT="Betaal op rekening en ontvang ee
 COM_BIXPRINTSHOP_PLUGIN_REKENING_SELECTED="Bestelling wordt betaald per factuur."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_KOSTEN_SPR="Hiervoor wordt %s aan administratiekosten berekend."
 
+COM_BIXPRINTSHOP_PLUGIN_REKENING_PREPARED="Betaling succesvol aangevraagd."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_SUCCESS="Betaling succesvol verwerkt."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_INVOICEMESS_SPR="Gelieve het volledige bedrag over te maken op rekening %s, t.n.v. %s."
 COM_BIXPRINTSHOP_PLUGIN_REKENING_NIET_TOEGESTAAN="Deze betaalmethode is niet toegestaan. Neem contact op met de klantenservice."
