--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -134,7 +134,6 @@ COM_BIXPRINTSHOP_SUBMENU_CONFIG_PLUGINS="Plugins"
 COM_BIXPRINTSHOP_SUBMENU_CONFIG_MAIL="Mail"
 ;form
 COM_BIXPRINTSHOP_LEGEND_CONFIG_ALGEMEEN="Algemene instellingen"
-COM_BIXPRINTSHOP_LEGEND_CONFIG_TRADETRACKER="TradeTracker"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_DEBUG="Debug instellingen"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_DRUKKERIJ="Drukkerij instellingen"
 COM_BIXPRINTSHOP_LEGEND_CONFIG_BETALEN="Betaalmethodes"
@@ -260,16 +259,6 @@ COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN="Feestdagen uitvoertermijn"
 COM_BIXPRINTSHOP_CONFIG_CALC_FEESTDAGEN_DESC="Geef aan welke feestdagen geblokkeerd moeten worden voor orderverwerking. LET OP! Invoeren kommagescheiden, YYYY-MM-DD, als volgt: 2013-12-25,2013-12-26,2013-03-15"
 PRIJSTYPE_MARGE="Gebruik margeberekening"
 PRIJSTYPE_VERKOOPDRUKKERIJ="Gebruik verkoopdrukkerijen"
-;statussen
-BIX_SUCCESS="Voltooid"
-BIX_FAILURE="Betaalrequest mislukt"
-BIX_BETALING_VERWERK="Wachtend op betaling"
-BIX_VALIDATION_ERR="Betaalrequest niet valide"
-BIX_TECHNICAL_ERR="Technische fout"
-BIX_REJECTED="Geweigerd"
-BIX_PENDING="In verwerking"
-BIX_CANCELLED="Onderbroken door gebruiker"
-BIX_CANCELLED_MERCH="Onderbroken door bank"
 ;foutmeldingen
 COM_BIXPRINTSHOP_BETALEN_GEENBESTELID="Geen bestelling-ID gevonden! Bekijk de order via uw gebruikersprofiel"
 
@@ -277,17 +266,6 @@ COM_BIXPRINTSHOP_BETALEN_GEEN_PLUGINRETURN="Geen return ontvangen van betaalplug
 COM_BIXPRINTSHOP_BETALEN_PUSH_GEENBESTELID="Geen bestelling-ID in push bericht!"
 COM_BIXPRINTSHOP_BETALEN_PUSH_FOUT="Fout in verwerking pushbericht betaalprovider"
 
-;tradetracker
-COM_BIXPRINTSHOP_CONFIG_TT_ACTIVE="Gebruik TradeTracker"
-COM_BIXPRINTSHOP_CONFIG_TT_ACTIVE_DESC="Activeer het in sessie vastleggen van TradeTracker verkeer"
-COM_BIXPRINTSHOP_CONFIG_TT_CAMPAIGNID="Campaign ID"
-COM_BIXPRINTSHOP_CONFIG_TT_CAMPAIGNID_DESC="Het door TradeTracker opgegeven campaignID"
-COM_BIXPRINTSHOP_CONFIG_TT_PRODUCTID="Product ID"
-COM_BIXPRINTSHOP_CONFIG_TT_PRODUCTID_DESC="Het door TradeTracker opgegeven productID"
-COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_CONVERSIONTYPE="Conversie type"
-COM_BIXPRINTSHOP_CONFIG_BETALEN_REKENING_CONVERSIONTYPE_DESC="Het conversie type voor deze campagne"
-CONVERSIONTYPE_LEAD="Lead"
-CONVERSIONTYPE_SALES="Sales"
 ;plugins
 COM_BIXPRINTSHOP_PLUGINS="Plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_JSCRIPT="Javascript plugins"
@@ -297,6 +275,7 @@ COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ATTRIB ="Productoptie plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_ORDER="Orderbewerking plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_IMPORT="Import plugins"
 COM_BIXPRINTSHOP_CONFIG_PLGGROUP_VERVOER="Vervoer plugins"
+COM_BIXPRINTSHOP_CONFIG_PLGGROUP_DRUKKERIJ="Drukkerij plugins"
 COM_BIXPRINTSHOP_PLG_ACTIVE="Activeer plugin"
 COM_BIXPRINTSHOP_PLG_DEBUG="Toon debug"
 COM_BIXPRINTSHOP_PLG_DEBUG_DESC="Toon debuginformatie bij deze plugin"
@@ -383,6 +362,8 @@ COM_BIXPRINTSHOP_DRUKKERIJEN_ALIAS_DESC="De alias vormt de url voor de drukkerij
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYNAAM="Bedrijfsnaam"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYNAAM_DESC="Geef de bedrijfsnaam op."
 COM_BIXPRINTSHOP_DRUKKERIJEN_ADRES="Adres"
+COM_BIXPRINTSHOP_DRUKKERIJEN_DRUKKPLUGIN="Drukkerij plugin"
+COM_BIXPRINTSHOP_DRUKKERIJEN_DRUKKPLUGIN_DESC="Selecteer eventueel een plguin voor extra opties bij deze drukkerij."
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYSTRAAT="Straatnaam"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYHUISNUMMER="Huisnummer"
 COM_BIXPRINTSHOP_DRUKKERIJEN_COMPANYPOSTCODE="Postcode"
@@ -624,6 +605,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_IMAGE="Productafbeelding"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_DESC="Hier kunt u een afbeelding uploaden voor de productpagina"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_ORIG="Originele grootte"
 COM_BIXPRINTSHOP_PRODUCTEN_IMAGE_X_PX="Producticoon %d px"
+COM_BIXPRINTSHOP_PRODUCTEN_METATITLE="Meta titel"
 COM_BIXPRINTSHOP_PRODUCTEN_METADESCR="Meta beschrijving"
 COM_BIXPRINTSHOP_PRODUCTEN_METAKEYWORDS="Meta keywords"
 COM_BIXPRINTSHOP_PRODUCTEN_PRODUCTDESCR="Productbeschrijving"
@@ -651,8 +633,6 @@ COM_BIXPRINTSHOP_PRODUCTEN_POS_SIDEBOTTOM="Naast form - Onder"
 ;drukvellen
 COM_BIXPRINTSHOP_AANTAL_VAN_TOT_SPRF="Van %s tot %s stuks"
 COM_BIXPRINTSHOP_GEWICHT_VAN_TOT_SPRF="Van %s tot %s kilo"
-MACHINETYPE_DIGITAAL="Digitaal"
-MACHINETYPE_OFFSET="Offset"
 COM_BIXPRINTSHOP_ADRES_TAV="t.a.v."
 COM_BIXPRINTSHOP_ADRES_TELEFOON="Telefoonnummer"
 COM_BIXPRINTSHOP_ERROR_NO_ORDEROPTIONVALUES="Geen order optie waardes "
@@ -847,9 +827,10 @@ COM_BIXPRINTSHOP_BESTELLING_VERZENDADRES="Verzendadres"
 COM_BIXPRINTSHOP_BESTELLING_FACTUURADRES="Factuuradres"
 FACTUUR_INITIEEL="Initiëel"
 FACTUUR_RESERVERING="Reservering"
-FACTUUR_CREDIT="Credit"
+FACTUUR_CREDITFACTUUR="Credit"
 FACTUUR_GECREDITEERD="Gecrediteerd"
-
+COM_BIXPRINTSHOP_FACTUUR_AANGEMAAKT="Factuur aangemaakt"
+COM_BIXPRINTSHOP_FACTUUR_GECREDITEERD="Factuur gecrediteerd"
 ORDERTYPE_INTERN="Ordertype intern"
 ORDERTYPE_EXTERN="Ordertype extern"
 COM_BIXPRINTSHOP_STATUS_STATUSCONFIRMED="Bevestigd"
@@ -914,6 +895,7 @@ COM_BIXPRINTSHOP_FACTUUR_CREDITID="Credit ID"
 COM_BIXPRINTSHOP_FACTUUR_EXTERNID="Extern ID"
 COM_BIXPRINTSHOP_FACTUUR_BETAALID="Betaal ID"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURNUMMER="Factuurnummer"
+COM_BIXPRINTSHOP_FACTUUR_FACTUURREDEN="Factuurreden"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
@@ -930,6 +912,10 @@ COM_BIXPRINTSHOP_FACTUUR_GROEP5="Factuurgroep 5"
 COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
+COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
+COM_BIXPRINTSHOP_CREEER_FACTUUR="Nieuwe factuur maken"
+COM_BIXPRINTSHOP_BESTELLING_FACTUUR_VERSCHIL="Verschil tussen bestelbedrag en factuurbedrag!"
+
 COM_BIXPRINTSHOP_ORDER_TOTAALNETTO="Order totaal netto"
 COM_BIXPRINTSHOP_ORDER_TOTAALBTW="Order totaal btw"
 COM_BIXPRINTSHOP_ORDER_TOTAALBRUTO="Order totaal bruto"
@@ -1023,6 +1009,7 @@ COM_BIXPRINTSHOP_PAPIERPRIJS_PRIJSEENHEID_DESC=""
 PRIJSEENHEID_1VEL="1 vel"
 PRIJSEENHEID_1000VEL="1000 vellen"
 PRIJSEENHEID_100KG="100 kilo"
+PRIJSEENHEID_M2="Vierkante meter"
 COM_BIXPRINTSHOP_CONFIG_PLUGIN_ACTIVE="Plugin actief"
 COM_BIXPRINTSHOP_CONFIG_PLUGIN_DEBUG="Plugin debug"
 
