--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
@@ -13,7 +13,7 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_STANDAARDUITVOER="Standaardwaarde uitoertermijn"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_SCROLLTOPRICES="Scroll naar prijs na selectie"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE="Volledige oplage ophalen"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE_DESC="Als alleen de oplage nog gekozen moet worden, alle mogelijke oplages en uitovertermijnen ophalen."
-
+COM_BIXPRINTSHOP_PLG_VERZAMEL_MACHINTYPES="Toon prijzen voor"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_GEENPRIJS="Geen prijs gevonden"
 
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DISABLEDSTYLE="Weergave onmogelijke opties"
@@ -24,8 +24,32 @@ TYPEDRUK_OFFSET="Offset"
 ;frontend uitvoeroplage
 COM_BIXPRINTSHOP_PLG_VERZAMEL_OPLAGE="Oplage"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_ANDEREOPLAGE="Andere oplage"
-COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS="Full color digitaal"
-COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS_DESC="Full color digitaal beschr"
-COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS="Full color offset"
-COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS_DESC="Full color offset beschr"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VERW_LEVERDATUM="Verwachte leverdatum"
+;persoonlijk
+COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS="Full color digitaal"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS_TITLE="Full color digitaal"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_DIGITAALPERS_DESC="Bij Drukhetnu beschikken we over verschillende persen. Van digitale persen die geschikt zijn voor kleine oplages, tot grootformaat persen voor offset drukwerk en signporoducten.<br/>
+<strong>Digitaal drukwerk</strong><br/>
+We hebben de beschikking over 6 HP Indigo 5000 en 5500 digitale persen. Met de snelheid van een printer maken we drukwerk met offset kwaliteit. Je hebt dus supersnel de hoogste kwaliteit digitaal drukwerk in huis.<br/>
+<strong>De voordelen:</strong><br/>
+<ul>
+<li>voordeliger bij kleinere oplages;</li>
+<li>weinig voorbereidingstijd;</li>
+<li>korte productietijden;</li>
+<li>elke afdruk kan anders zijn qua tekst of beeld, waardoor personalisatie mogelijk is. </li>
+</ul>
+<strong>Textiel en sign producten</strong><br/>
+Ook voor deze producten hebben we een heel machinepark staan. Van machines die met UV-inkten printen tot machines die platen, doeken, folie en papier frezen, snijden en rillen."
+COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS="Full color offset"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS_TITLE="Full color offset"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_OFFSETPERS_DESC="Bij Drukhetnu beschikken we over verschillende persen. Van digitale persen die geschikt zijn voor kleine oplages, tot grootformaat persen voor offset drukwerk en signporoducten.<br/>
+<strong>Offset drukwerk</strong><br/>
+Naast onze digitale persen, beschikken we over een aantal groot formaat Komori persen:
+<ul>
+<li>vijfkleurenpersen in midden formaat (53x75 cm)</li>
+<li>vijfkleurenpersen in groot formaat (70x100 cm en 104x144 cm)</li>
+<li>tweezijdig vierkleurenpersen in groot formaat (72x103 cm) </li>
+</ul>
+Op deze persen drukken we al het offset drukwerk. Geschikt voor grote oplages, van huisstijlen tot het drukken van boeken.<br/>
+<strong>Textiel en sign producten</strong><br/>
+Ook voor deze producten hebben we een heel machinepark staan. Van machines die met UV-inkten printen tot machines die platen, doeken, folie en papier frezen, snijden en rillen."
