--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -26,6 +26,8 @@ BIX_OKE="Oké"
 BIX_VERZILVER="Verzilver"
 BIX_DATE="d-m-Y H:i:s"
 BIX_ACTIVE="Actief"
+COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_TEKST="Eigen tekst"
+COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_LETTERTYPE="Lettertype"
 
 ; controller
 COM_BIXPRINTSHOP_DELETE_SUCCESS="Item succesvol naar prullenbak verplaatst"
