--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_couponcode.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_couponcode.ini
@@ -19,3 +19,4 @@ COM_BIXPRINTSHOP_PLG_COUPONCODE_COND_OPERATOR="Vergelijkingsmethode"
 COND_OPERATOR_KLEINER="Kleiner dan"
 COND_OPERATOR_GROTER="Groter dan"
 COND_OPERATOR_GELIJK="Gelijk aan"
+BIX_GEEN_PRODFILTER="Geen productfilter"
