--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_vervoer_probo.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_vervoer_probo.ini
@@ -9,3 +9,4 @@ VERVOERDER_PROBO="Probo vervoer"
 COM_BIXPRINTSHOP_PLG_VERVOER_PROBO_MAXLENGTE="Max.lengte"
 COM_BIXPRINTSHOP_PLG_VERVOER_PROBO_MAXBREEDTE="Max.breedte"
 COM_BIXPRINTSHOP_PLG_VERVOER_PROBO_MAXHOOGTE="Max.hoogte"
+COM_BIXPRINTSHOP_PLG_VERVOER_PROBO_ARTCODE="Artikelcode"
