--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -421,6 +421,7 @@ COM_BIXPRINTSHOP_PRIJS_PRIJSDATA="Data"
 BIX_SELECT_ATTRIB_SPR="-selecteer %s-"
 BIX_SELECT_PRODUCT="-selecteer product-"
 BIX_SELECT_DRUKKER="-selecteer drukker-"
+COM_BIXPRINTSHOP_TITLE_REFRESHCACHE="Ververs cache"
 ;***
 ;* productopties
 ;*
