--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -810,6 +810,7 @@ COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEPRIJS="Administratiekosten"
 COM_BIXPRINTSHOP_BESTELLING_ADMINISTRATIEBTW="Administratie btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELKORTING="Korting"
+COM_BIXPRINTSHOP_BESTELLING_KORTINGBTW="Korting btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_BESTELLING_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_BESTELLING_BESTELTYPE="Bestelling type"
