--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_bix_ideal.ini
@@ -77,7 +77,7 @@ BIX_PENDING="In verwerking"
 BIX_CANCELLED="Onderbroken door gebruiker"
 BIX_CANCELLED_MERCH="Onderbroken door bank"
 
-COM_BIXPRINTSHOP_CONFIG_BETALEN_BIX_IDEAL_TRANSACTION_DESC_SPR="Betaling bestelling %s, factuur %s op %s"
+COM_BIXPRINTSHOP_CONFIG_BETALEN_BIX_IDEAL_TRANSACTION_DESC_SPR="Factuur %s, bestelling %s, op %s"
 
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_TEXT="Betaling via iDEAL geselecteerd."
 COM_BIXPRINTSHOP_PLUGIN_BIX_IDEAL_SELECTED="Betaling via iDEAL geselecteerd."
