--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -58,6 +58,7 @@ BIX_RIGHT="Rechts"
 BIX_LEFT="Links"
 BIX_CENTER="Midden"
 BIX_ORIGINAL="Originele grootte"
+BIX_AANTAL="Aantal"
 COM_BIXPRINTSHOP_BEWERK_PROFIEL="Bewerk Klant"
 COM_BIXPRINTSHOP_ADMIN_ALS_GEBRUIKER_SPR="Administrator werkt als gebruiker %s."
 BIX_DATE="d-m-Y H:i:s"
@@ -911,7 +912,9 @@ COM_BIXPRINTSHOP_FACTUUR_BESTELNETTO="Bestelling netto"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBTW="Bestelling btw"
 COM_BIXPRINTSHOP_FACTUUR_BESTELBRUTO="Bestelling bruto"
 COM_BIXPRINTSHOP_CREDITEER_FACTUUR="Factuur crediteren"
+COM_BIXPRINTSHOP_CREEER_FACTUUR="Factuur creëren"
 
+COM_BIXPRINTSHOP_FACTUUR_FACTUURREDEN="Reden factuur"
 COM_BIXPRINTSHOP_FACTUURREDEN_RESERVERING="Aanmaken factuurnummer"
 COM_BIXPRINTSHOP_FACTUURREDEN_NIEUWE_BESTELLING="Aanmaken factuur na bevestiging bestelling"
 
@@ -968,6 +971,8 @@ COM_BIXPRINTSHOP_ORDER_BESTELID="Bestelling ID / Status"
 COM_BIXPRINTSHOP_ORDER_USER="Gebruiker"
 COM_BIXPRINTSHOP_ORDER_LOCKCALC="Blokkeer calculatie"
 COM_BIXPRINTSHOP_ORDER_LOCKCALC_DESC="Voorkom dat de order opnieuw gecalculeerd wordt."
+COM_BIXPRINTSHOP_ORDER_LOCKINKOOPCALC="Blokkeer inkoopcalculatie"
+COM_BIXPRINTSHOP_ORDER_LOCKINKOOPCALC_DESC="Voorkom dat de order opnieuw gecalculeerd wordt."
 
 COM_BIXPRINTSHOP_LEGEND_ORDER_DETAILS="Orderdetails"
 COM_BIXPRINTSHOP_LEGEND_ORDER_STATUS="Order status"
