--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
@@ -10,3 +10,4 @@ COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_EERSTENUMMER_DESC="Geef aan welk factuur
 COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_FILENAMETPL="Template bestandsnaam"
 COM_BIXPRINTSHOP_PLUGIN_INVOICE_DEFAULT_FILENAMETPL_DESC="Geef aan hoe de bestandsnaam moet worden. Standaard: {datum}-factuur-{factuurnummer}. Gebruik geen spaties of speciale tekens!"
 COM_BIXPRINTSHOP_FACTUUR_DUEDATE_SPRF="Gezien de betalingstermijn welke wij hebben toegekend aan dit account, dient de betaling van deze factuur voor %s afgerond te zijn."
+COM_BIXPRINTSHOP_FACTUUR_FACTUURREFERENTIE="Factuurreferentie"
