--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -966,6 +966,8 @@ COM_BIXPRINTSHOP_ORDER_ORDERNETTO="Orderbedrag netto"
 COM_BIXPRINTSHOP_ORDER_ORDERBTW="Order btw"
 COM_BIXPRINTSHOP_ORDER_ORDERBRUTO="Orderbedrag bruto"
 COM_BIXPRINTSHOP_ORDER_ORDERTYPE="Ordertype"
+BIX_ALLE_ORDERS="Toon alle orders"
+BIX_VERBERG_ONBESTELD="Verberg onbestelde"
 
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGE_SPR="%s stuks"
 COM_BIXPRINTSHOP_ORDER_PLANOSHORT_OPLAGEOMVANG_SPR="%s stuks, omvang %s pagina's"
