--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_invoice_default.ini
@@ -46,3 +46,4 @@ COM_BIXPRINTSHOP_FACTUUR_FACTUURSTATUS="Factuurstatus"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURLINK="Factuur link"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURDATUM="Factuurdatum"
 COM_BIXPRINTSHOP_FACTUUR_FACTUURREFERENTIE="Factuurreferentie"
+COM_BIXPRINTSHOP_FACTUUR_BTWNUMMER="BTW-nummer"
