--- a/administrator/language/nl-NL/nl-NL.plg_user_bps_profile.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_user_bps_profile.ini
@@ -82,4 +82,5 @@ BIX_BRIEFHOOFD_FORMEEL_V="Mevr %s %s"
 PLG_USER_BPS_BPSADRES_SLIDER_LABEL="Gebruikers adressen"
 PLG_USER_BPS_PROFILE_ADRESSEN="Adressen"
 
-
+PLG_USER_BPS_PROFILE_DEBITEUR="Debiteurnummer"
+PLG_USER_BPS_PROFILE_BTWNUMMER="BTW-nummer"
