--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -451,6 +451,7 @@ ATTRIBCALCPER_DRUK="Drukkosten"
 ATTRIBCALCPER_OPTIE="Andere optie"
 ATTRIBCALCPER_PAPIER="Papierkosten"
 ATTRIBCALCPER_PLANO="Totale planokosten"
+ATTRIBCALCPER_AFWERKING="Afwerking"
 ATTRIBCALCPER_TOTAAL="Totale kosten"
 ATTRIBCALCTYPE_NONE="Geen"
 ATTRIBCALCTYPE_OPSLAG_PER="Opslag per"
