--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -6,6 +6,8 @@ COM_BIXPRINTSHOP_TITLE_CHECKOUT="Afrekenen"
 
 ; algemeen
 BIX_ADRES_TOEVOEGEN="Adres toevoegen"
+BIX_ACTIVE="Actief"
+BIX_DELETED="Verwijderd"
 BIX_MAAK_KEUZE="Maak keuze"
 BIX_RESET="Reset"
 BIX_ZOEKEN="Zoeken"
