--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_xgram.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_drukkerij_xgram.ini
@@ -8,3 +8,9 @@ COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_XML="Xgram XML-bestand"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_WEBSHOPCODE="Webshopcode"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_USERID="Gebruikersnaam"
 COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_PASSWORD="Wachtwoord"
+
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_JSCRIPTVEREZ_VERPLICHT="De plugin Xgram werkt alleen met verzamelprijzen"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_LEVERANCIER="Leverancier"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_WEBSHOPCONTACTPERSOON="Contactpersoon"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_FUNCTIE="Functie"
+COM_BIXPRINTSHOP_PLG_DRUKKERIJ_XGRAM_KLANTCODE="Klantcode"
