--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -625,7 +625,7 @@ COM_BIXPRINTSHOP_PRODUCTEN_AUTO_ITEMID="Automatisch aangemaakt door Bixie Prints
 COM_BIXPRINTSHOP_PRODUCTEN_SHOW_DEFAULT_CARTBUTTON="Toon standaard bestelknop"
 COM_BIXPRINTSHOP_PRODUCT_ATTRIBS_AVAILABLE="Beschikbare productopties"
 COM_BIXPRINTSHOP_PRODUCT_ATTRIBS_INPRODUCT="Gekoppelde productopties"
-
+COM_BIXPRINTSHOP_PRODUCTEN_DISABLE_UPLOAD="Upload uitschakelen"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE="Paginatitel"
 COM_BIXPRINTSHOP_PRODUCTEN_PAGETITLE_DESC="Geef eventueel een alternatieve paginatitel op. Standaard wordt de productnaam gebruikt."
 
