--- a/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -27,9 +27,11 @@ BIX_VERZILVER="Verzilver"
 BIX_DATE="d-m-Y H:i:s"
 BIX_ACTIVE="Actief"
 BIX_GEEN_KEUZE="Geen keuze gemaakt"
+BIX_AANTAL="Aantal"
+;attribtype voor rendering buiten product
 COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_TEKST="Eigen tekst"
 COM_BIXPRINTSHOP_ATTRIBTYPE_EIGENTEKST_LETTERTYPE="Lettertype"
-BIX_AANTAL="Aantal"
+COM_BIXPRINTSHOP_ATTRIBTYPE_BUNDELEN_AANTALBUNDELS="Aantal bundels"
 
 ; controller
 COM_BIXPRINTSHOP_DELETE_SUCCESS="Item succesvol naar prullenbak verplaatst"
@@ -38,6 +40,7 @@ COM_BIXPRINTSHOP_SAVE_ADRES_SUCCESS="Adres succesvol opgeslagen"
 COM_BIXPRINTSHOP_ADMIN_ALS_GEBRUIKER_SPR="Administrator werkt als gebruiker %s."
 COM_BIXPRINTSHOP_GEEN_GEBRUIKER_GEV="Geen gebruiker gevonden"
 COM_BIXPRINTSHOP_LOGIN_TO_CHECKOUT="Log in of registreer om af te rekenen."
+COM_BIXPRINTSHOP_ADDED_FROM_BESTELCOMMENT="Toegevoegd uit bestelcommentaar"
 ; fouten
 BIX_ERROR_SAVE_ADRES_SPRF="Fout in opslaan adres: %s"
 COM_BIXPRINTSHOP_DUBBELE_ADRESALIAS_SPRF="Alias %s bestaat al."
