--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -997,6 +997,14 @@ COM_BIXPRINTSHOP_ORDER_MARGE_AFWERKING="Marge afwerking"
 COM_BIXPRINTSHOP_ORDER_MARGE_BESTELLING="Marge orderprijs"
 COM_BIXPRINTSHOP_ORDER_MARGE_CART="Marge winkelwagen"
 
+COM_BIXPRINTSHOP_ORDER_LOKALE_BESTANDEN="Lokale bestanden"
+COM_BIXPRINTSHOP_ORDER_ORDER_BESTANDEN="Gekoppeld aan order"
+COM_BIXPRINTSHOP_ORDER_ORDER_THUMBS="Thumbs en gerelateerde bestanden"
+COM_BIXPRINTSHOP_ORDER_FTP_CONNECT="Verbinden met FTP"
+COM_BIXPRINTSHOP_ORDER_FTP_NOT_CONNECTED="Niet verbonden"
+COM_BIXPRINTSHOP_ORDER_FTP_CONNECT_ERROR_SPR="FTP-fout: %s"
+COM_BIXPRINTSHOP_ORDER_FTP_CONNECTED_SPR="Verbonden met host %s"
+COM_BIXPRINTSHOP_ORDER_FTP_CURRENTFOLDER_SPR="Inhoud van de map %s"
 
 ORDERTYPE_CALC="Caluclatieorder"
 COM_BIXPRINTSHOP_ORDEROPTION_ID="Orderoptie ID"
