--- a/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
+++ b/administrator/language/nl-NL/nl-NL.com_bixprintshop.ini
@@ -1005,6 +1005,9 @@ COM_BIXPRINTSHOP_ORDER_FTP_NOT_CONNECTED="Niet verbonden"
 COM_BIXPRINTSHOP_ORDER_FTP_CONNECT_ERROR_SPR="FTP-fout: %s"
 COM_BIXPRINTSHOP_ORDER_FTP_CONNECTED_SPR="Verbonden met host %s"
 COM_BIXPRINTSHOP_ORDER_FTP_CURRENTFOLDER_SPR="Inhoud van de map %s"
+COM_BIXPRINTSHOP_ORDER_FTP_SENDRIGHT="Verstuur bestanden naar de huidige FTP-map"
+COM_BIXPRINTSHOP_ORDER_FTP_TO_LIST="Naar bestandslijst"
+COM_BIXPRINTSHOP_ORDER_FTP_SENT_TO_FOLDER_SPR="Verzonden naar de map %s"
 
 ORDERTYPE_CALC="Caluclatieorder"
 COM_BIXPRINTSHOP_ORDEROPTION_ID="Orderoptie ID"
