peter uit buckaroo

--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo_transfer.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_betaal_buckaroo_transfer.ini
@@ -8,13 +8,13 @@ COM_BIXPRINTSHOP_PLUGIN_TITLE_BUCKAROO_TRANSFER="Buckaroo Op rekening"
 TEXT_BUCKAROO_TRANSFER="Op rekening"
 
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFER_TITLE_CHECKOUT="Op rekening"
-COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFER_DESC_CHECKOUT="Zelf overmaken op Peter's rekening"
+COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFER_DESC_CHECKOUT="Betaal op rekening en ontvang een factuur"
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFER_TEXT="Je betaalt op rekening. Betaling binnen 14 dagen na orderdatum."
 
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFER_SELECTED="Op rekening geselecteerd. Je ontvangt de details voor de betaling per email. Betaling binnen 14 dagen na orderdatum."
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_TRANSFER_KOSTEN_SPR="De kosten hiervoor zijn %s excl. BTW."
 
-COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_NOT_ALLOWED="Betaalmethode niet toegestaan. Neem contact op met je orderbegeleider als je hiervan gebruik wilt maken."
+COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_NOT_ALLOWED="Betaalmethode niet toegestaan. Neem contact op met de klantenservice als je hiervan gebruik wilt maken."
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_PARAM_ALLOWED="Toegestaan voor"
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_PARAM_ALLOWED_DESC="Geef aan welke gebruikersgroep(en) deze betaling mogen gebruiken"
 COM_BIXPRINTSHOP_PLUGIN_BUCKAROO_PARAM_REMINDER="Herinneringsniveau"
