--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_jscript_verzamel.ini
@@ -15,6 +15,8 @@ COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE="Volledige oplage ophalen"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_VOLLEDIGEOPLAGE_DESC="Als alleen de oplage nog gekozen moet worden, alle mogelijke oplages en uitovertermijnen ophalen."
 COM_BIXPRINTSHOP_PLG_VERZAMEL_MACHINTYPES="Toon prijzen voor"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_GEENPRIJS="Geen prijs gevonden"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_HIDEOPLAGES="Filter de oplages"
+COM_BIXPRINTSHOP_PLG_VERZAMEL_HIDEOPLAGES_DESC="Verberg een aantal oplages en toon de meer/minder oplages knop"
 
 COM_BIXPRINTSHOP_PLG_VERZAMEL_DISABLEDSTYLE="Weergave onmogelijke opties"
 COM_BIXPRINTSHOP_PLG_VERZAMEL_TYPEDRUK="Type machine"
